--- a/invntory.ini
+++ b/invntory.ini
@@ -1,2 +1,2 @@
 [mysql]
-172.31.94.88 ansible.username=ec2-user ansible.password=DevOps321
+172.31.94.88 ansible_user=ec2-user ansible_password=DevOps321
