--- a/mysql.yaml
+++ b/mysql.yaml
@@ -2,7 +2,14 @@
   hosts: mysql
   become: yes
   tasks:
+
   - name: Install mysql server
     ansible.builtin.package:
       name: mysql-server
       state: installed
+
+  - name: start and enabke the mysql service
+    ansible.builtin.service:
+      name: mysqld
+      state: started
+      enabled: yes
