--- a/mysql.yaml
+++ b/mysql.yaml
@@ -13,3 +13,16 @@
       name: mysqld
       state: started
       enabled: yes
+
+  - name: connect to mysql
+    community.mysql.mysql_info:
+      login_user: root 
+      login_password: ExpenseApp@1
+      login_host: mysql.psrexpense.store
+    register: mysql_info
+
+  - name: print the output
+    ansible.builtin.debug:
+      msg: "mysql info: {{mysql_info}}"
+
+  
