--- a/mysql.yaml
+++ b/mysql.yaml
@@ -7,7 +7,7 @@
     ansible.builtin.pip:
       name: PyMySQL
       executable: pip3.9
-      
+
   - name: Install mysql server
     ansible.builtin.package:
       name: mysql-server
@@ -25,6 +25,7 @@
       login_password: ExpenseApp@1
       login_host: mysql.psrexpense.store
     register: mysql_info
+    ignore_errors: true
 
   - name: print the output
     ansible.builtin.debug:
