--- a/mysql.yaml
+++ b/mysql.yaml
@@ -31,5 +31,9 @@
     ansible.builtin.debug:
       msg: "mysql info: {{mysql_info}}"
 
+  - name: setup the root password
+    ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
+    when: mysql_info.failed is true
+
 
   
