--- a/invntory.ini
+++ b/invntory.ini
@@ -1,2 +1,12 @@
 [mysql]
-172.31.84.167 ansible_user=ec2-user ansible_password=DevOps321
+mysql.psrexpense.store
+
+[Backend]
+backend.psrexpense.store
+
+[Frontend]
+frontrnd.psrexpense.store
+
+[all:vars]
+ ansible_user=ec2-user 
+ ansible_password=DevOps321
