--- a/invntory.ini
+++ b/invntory.ini
@@ -1,10 +1,10 @@
 [mysql]
 mysql.psrexpense.store
 
-[Backend]
+[backend]
 backend.psrexpense.store
 
-[Frontend]
+[frontend]
 frontrnd.psrexpense.store
 
 [all:vars]
