--- a/backend.yaml
+++ b/backend.yaml
@@ -8,3 +8,12 @@
 
   - name: enable nodejs 20
     ansible.builtin.command: dnf module enable nodejs:20 -y
+
+  - name: install nodejs
+    ansible.builtin.package:
+      name: nodejs
+      state: installed
+
+    - name: create a user expense
+      ansible.builtin.user:
+        name: expense
