--- a/backend.yaml
+++ b/backend.yaml
@@ -17,3 +17,8 @@
   - name: create a user expense
     ansible.builtin.user:
       name: expense
+
+  - name: create a app directory
+    ansible.builtin.file:
+      path: app
+      state: directory
