--- a/backend.yaml
+++ b/backend.yaml
@@ -20,5 +20,16 @@
 
   - name: create a app directory
     ansible.builtin.file:
-      path: app
+      path: /app
       state: directory
+
+  - name: Download the application code to created app directory
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+      dest: /tmp/backend.zip
+
+  - name: unzip the application code
+    ansible.bulitin.unarchive:
+      src: /tmp/backend.zip
+      dest: /app
+      remote_src: yes
