--- a/backend.yaml
+++ b/backend.yaml
@@ -33,3 +33,7 @@
       src: /tmp/backend.zip
       dest: /app
       remote_src: yes
+
+  - name: install the nodejs dependencies
+    community.general.npm:
+      path: /app
