--- a/backend.yaml
+++ b/backend.yaml
@@ -63,3 +63,11 @@
       login_password: ExpenseApp@1
       login_host: mysql.psrexpense.store
       target: /app/schema/backend.sql
+
+
+  - name: deamon reload
+    ansible.builtin.systemd_service:
+      enabled: true
+      state: restarted
+      daemon_reload: true
+      name: backend
