--- a/invntory.ini
+++ b/invntory.ini
@@ -5,7 +5,7 @@ mysql.psrexpense.store
 backend.psrexpense.store
 
 [frontend]
-frontrnd.psrexpense.store
+frontend.psrexpense.store
 
 [all:vars]
  ansible_user=ec2-user 
