--- a/frontend.yaml
+++ b/frontend.yaml
@@ -13,3 +13,13 @@
       name: nginx
       state: started
       enabled: yes
+
+  - name: delete the directory
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: absent
+
+  - name: create a directory
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: directory
