--- a/frontend.yaml
+++ b/frontend.yaml
@@ -35,9 +35,9 @@
       dest: /usr/share/nginx/html
       remote_src: yes
 
-  - name: copy backend service file from anisble server to remote backend server
+  - name: copy the frontend configuration file
     ansible.builtin.copy:
-      src: frontend.conf
+      src: expense.conf
       dest: /etc/nginx/default.d/expense.conf  
 
   - name: restart the nginx service
